2009-12-22 Holger Vogt
 * measure.c: bugfix (%f replaced by %e)

2009-12-21 Holger Vogt
 * com_measure2.com, measure.c: add vectors to the meas command.
   inpcom.c: no parsing of ternary function in .control section (not
   yet defined anyway).
   /examples/measure /examples/control_structs /examples/control_xspice: 
   new or updated example files.

2009-12-20 Holger Vogt
 * fixing the time 0 value of sine in isrc, vsrc
 * fteext.h, com_measure2.c, measure.c, commands.c:
   New .meas functions min_at or max_at will return the x value (maximum at x)
   meas command is now available in the .control ... .endc section in ngspice
   (still not tested for all possible variations, but ...).

2009-12-19 Paolo Nenzi
 * src/spicelib/devices/isrc/isrcacct.c, src/spicelib/devices/vsrc/vsrcacct.c:
   fixed bug reported by Holger. "time" value in accept routine was incorrectly 
   computed when xspice extensions were compiled in. 

2009-12-19 Holger Vogt
 * main.c, inpcom.c: source file path added as additional search path for
   opening .include files (MS Windows only).
   measure.c: .meas only when -b and -r are not set
   fteext.h: cleanup of unused entries
   breakp2.c, dotcards.c, inp.c, main.c: comments added

2009-12-17 Dietmar Warning
 * devices/bsim3/b3set.c: add the ngspice specific copyNodesets approach and remove
   the tnom celsius -> kelvin transformation
 * devices/bsim3/b3mpar.c: make the tnom celsius -> kelvin transformation in first run
 * devices/bsim3v32/b3v32ld.c: reconstruct NEWCONV code, also if it is not 
   used because macro is set in macros.h, but is now inline with UCB code
 * inpcom.c, spicenum.c, xpressn.c: prevent int to unsigned compare
 * tests/transmission/ibm2.cir: wrong cpl model instantiation

2009-12-12 Holger Vogt
 * runcoms: evaluate measure commands only when avaialble
 * /examples/transimpedanceamp/output.net: correct .plot statement
 * string.c: '^' added to is_arith_char(), to allow parsing of '^' in
   .func function definitions
 